--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <style>
-      *{
-        font-family: "Roboto", sans-serif;
-      }
+      * {
+          margin-top: 0;
+          font-family: "Roboto", sans-serif;
+        }
     </style>
     <title>Multi Step Form - Material UI</title>
   </head>
